# DS

./: .gitignore  DSE&HW1&HW2.code-workspace  Lab&HW.code-workspace  README.md
DSExercise/: CMakeLists.txt  DSExercise.c
DSExercise/DataStructures/: LinkedList.c
DSExercise/DynamicString/: DynamicString.c  DynamicString.h
DSExercise/EulerCircuit/: graph.c  graph.h
DSExercise/Expression/: Expression.c  Expression.h  Stack.c  Stack.h
DSExercise/MathComplex/: Complex.c  Complex.h  MathComplex.c
DSExercise/Matrix/: Matrix.c  Matrix.h
DSExercise/Polynomial/: Lab2.c  Polynomial.c  Polynomial.h
DSExercise/Tests/: CMakeLists.txt  DSExerciseTest.c
HW/HW1/: CMakelists.txt  HW1.c
HW/HW2/: CMakeLists.txt  hw2.c
HW/HW2/SeqList/: SeqList.h
HW/HW3/: hw3.c
HW/HW4/: CMakeLists.txt  HW4.c
HW/HW6/: 645.c  659.c  CMakeLists.txt  HW6.c
HW/HW7/: 722.c  742.c
HW2/: CMakeLists.txt  hw2.c
HW2/LinkedList/: LinkedList.c  LinkedList.h
HW2/SeqList/: SeqList.c
HW3/: .gitignore  CMakeLists.txt  hw3.c
HW3/Queue/: Queue.c  Queue.h
HW4/: HW4.c
